# files

./: AddressBar.qml  CMakeLists.txt  ContentPage.qml  FileIconButton.qml  HomePage.qml  HomePage.qml.ZHEnpm  HomePage.qml.eKOPfG  HomePageCard.qml  HomePageDisks.qml  HomePageFavourites.qml  HomePagePinned.qml  HomePageRecent.qml  HomePageTagged.qml  README.md  SideBar.qml  backendclass.cpp  backendclass.h  disklist.cpp  disklist.h  disklistmodel.cpp  disklistmodel.h  favouritelist.cpp  favouritelist.h  favouritelistmodel.cpp  favouritelistmodel.h  main.cpp  main.qml  main.qml.DfKHUP  pinned.cpp  pinned.h  pinnedmodel.cpp  pinnedmodel.h  qml.qrc  recents.cpp  recents.h  recentsmodel.cpp  recentsmodel.h  tagged.cpp  tagged.h  taggedmodel.cpp  (+1 more)
